      something like --print-uris
  * python/apt_pkgmodule.cc:
    - add InstState{Ok,ReInstReq,Hold,HoldReInstReq} constants
  * apt/cache.py:
    - add reqReinstallPkgs property that lists all packages in
      ReInstReq or HoldReInstReq
  * data/templates/Ubuntu.info.in:
    - added ubuntu 'intrepid'
  * debian/README.source: 
    - added (basic) documentation how to build python-apt

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 04 Jan 2008 21:17:00 +0100

python-apt (0.7.4) unstable; urgency=low

  * apt/debfile.py:
    - added wrapper around apt_inst.debExtract()
    - support dictionary like access 
  * apt/package.py:
    - fix apt.package.Dependency.relation initialization
  * python/apt_instmodule.cc:
    - added arCheckMember()
    - fix typo
  * aptsources/distro.py:
    - throw NoDistroTemplateException if not distribution template
      can be found
  * python/string.cc:
    - fix overflow in SizeToStr()
  * python/metaindex.cc:
    - added support for the metaIndex objects
  * python/sourceslist.cc:
    - support new "List" attribute that returns the list of
      metaIndex source entries
  * python/depcache.cc:
    - be more threading friendly
  * python/tag.cc
    - support "None" as default in 
      ParseSection(control).get(field, default), LP: #44470
  * python/progress.cc:
    - fix refcount problem in OpProgress
    - fix refcount problem in FetchProgress
    - fix refcount problem in CdromProgress
  * apt/README.apt:
    - fix typo (thanks to Thomas Schoepf, closes: #387787)
  * po/fr.po:
    - merge update, thanks to Christian Perrier (closes:  #435918)
  * data/templates/:
    - update templates

 -- Michael Vogt <mvo@debian.org>  Thu, 06 Dec 2007 15:35:46 +0100

python-apt (0.7.3.1) unstable; urgency=low

  * NMU
  * Fix version to not use CPU and OS since it's not available on APT
    anymore (closes: #435653, #435674)

 -- Otavio Salvador <otavio@debian.org>  Thu, 02 Aug 2007 18:45:25 -0300

python-apt (0.7.3) unstable; urgency=low
