@@ -18,6 +18,9 @@ python-apt (0.7.5) UNRELEASED; urgency=low
     - added ubuntu 'intrepid'
   * debian/README.source: 
     - added (basic) documentation how to build python-apt
+  * aptsources/distinfo.py:
+    - support arch specific BaseURI and MatchURI in the distinfo
+      template
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 04 Jan 2008 21:17:00 +0100
 
